--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,34 @@
 {
-    "name": "devcake-deventer/laravel-loki-logging",
+    "name": "webstasolutions/laravel-loki-logging",
     "version": "0.0.1",
-    "description": "Logging to Loki for Laravel",
+    "description": "Logging to Loki for Laravel (PHP 8)",
     "type": "library",
     "authors": [
         {
             "name": "Sven Mol",
             "email": "s.mol@devcake.nl"
+        },
+        {
+            "name": "Jan Bláha",
+            "email": "jan.blaha@websta.de"
         }
     ],
     "require": {
-        "php": "^7.0",
+        "php": "^8.0",
         "ext-json": "*",
-        "illuminate/support": "^8.0.0",
-        "illuminate/console": "^8.0.0",
-        "monolog/monolog": "^2.0.0"
+        "illuminate/support": "~8.63.0",
+        "illuminate/console": "~8.63.0",
+        "monolog/monolog": "~2.3.5"
     },
     "autoload": {
         "psr-4": {
-            "Devcake\\LaravelLokiLogging\\": "src/"
+            "Websta\\LaravelLokiLogging\\": "src/"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Devcake\\LaravelLokiLogging\\L3ServiceProvider"
+                "Websta\\LaravelLokiLogging\\L3ServiceProvider"
             ]
         }
     }
